# locations

./: ._supplementing.json  .env.example  Makefile  README.md  compose.yaml  pyproject.toml
data/: test.json
octopus_exercise/: main.py
octopus_exercise/api/: builders.py  controller.py  models.py  routes.py
octopus_exercise/db/: crud.py  models.py  session.py
octopus_exercise/etl/: extract.py  load.py  run.py  transform.py
octopus_exercise/scripts/: db-create.sql
octopus_exercise/utils/: geolocation.py
tests/: test_connector.py
