[project]
name = "octopus-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-admin>=1.0.4",
    "fastapi[standard]>=0.116.1",
    "geopy>=2.4.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a18",
]
